[gd_scene load_steps=12 format=2]

[ext_resource path="res://Pictures/UI/Back.png" type="Texture" id=1]
[ext_resource path="res://Pictures/UI/OptionsBackground.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Transylv.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/Mainbutton.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/OptionsScreen.gd" type="Script" id=5]
[ext_resource path="res://UI/Fade_scene_change.tscn" type="PackedScene" id=6]
[ext_resource path="res://Sounds/ClickUI.wav" type="AudioStream" id=7]
[ext_resource path="res://Pictures/UI/check-box.png" type="Texture" id=8]
[ext_resource path="res://Pictures/UI/blank-check-box.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 40
extra_spacing_top = 20
extra_spacing_char = 3
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
extra_spacing_char = 2
font_data = ExtResource( 3 )

[node name="OptionsScreen" type="Node"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -16 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.25989
margin_right = 1.25989
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="MarginContainer"]
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 515.251, 297.353 )
scale = Vector2( 0.65, 0.65 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Sprite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -590.5
margin_top = -413.0
margin_right = -590.5
margin_bottom = -413.0
size_flags_vertical = 4
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/Sprite/VBoxContainer"]
margin_right = 1181.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.623529, 0.00392157, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Options"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Sprite/VBoxContainer"]
margin_top = 180.0
margin_right = 345.0
margin_bottom = 454.0
size_flags_horizontal = 2
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer"]
margin_right = 345.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 8
custom_constants/separation = 150

[node name="FullScreen" type="Label" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 155.0
margin_bottom = 58.0
rect_min_size = Vector2( 155, 0 )
size_flags_horizontal = 2
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.00392157, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Full screen"

[node name="ScreenBox" type="CheckBox" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 305.0
margin_top = 18.0
margin_right = 345.0
margin_bottom = 58.0
rect_min_size = Vector2( 30, 30 )
size_flags_vertical = 8
custom_icons/checked = ExtResource( 8 )
custom_icons/unchecked = ExtResource( 9 )

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 345.0
margin_bottom = 166.0
custom_constants/separation = 150

[node name="Sound" type="Label" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 155.0
margin_bottom = 58.0
rect_min_size = Vector2( 155, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.00392157, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Sound"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 305.0
margin_right = 335.0
margin_bottom = 58.0
rect_min_size = Vector2( 30, 30 )
pressed = true

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 345.0
margin_bottom = 274.0
custom_constants/separation = 150

[node name="Difficulty" type="Label" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 155.0
margin_bottom = 58.0
rect_min_size = Vector2( 155, 0 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.623529, 0.00392157, 0.00392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Difficulty"

[node name="CheckBox" type="CheckBox" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 305.0
margin_right = 329.0
margin_bottom = 58.0
pressed = true

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Sprite/VBoxContainer"]
margin_left = 828.0
margin_top = 657.0
margin_right = 1181.0
margin_bottom = 722.0
size_flags_horizontal = 8
size_flags_vertical = 6

[node name="BackToMenu" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer2" instance=ExtResource( 4 )]

[node name="Label" parent="MarginContainer/Sprite/VBoxContainer/VBoxContainer2/BackToMenu" index="1"]
text = "Back"

[node name="FadeEffect" parent="." instance=ExtResource( 6 )]
visible = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="toggled" from="MarginContainer/Sprite/VBoxContainer/VBoxContainer/HBoxContainer/ScreenBox" to="." method="_on_ScreenBox_toggled"]
[connection signal="pressed" from="MarginContainer/Sprite/VBoxContainer/VBoxContainer2/BackToMenu" to="." method="_on_BackToMenu_pressed"]

[editable path="MarginContainer/Sprite/VBoxContainer/VBoxContainer2/BackToMenu"]

[editable path="FadeEffect"]
